# mlgrad

./: MANIFEST.in  README.md  _custom_build.py  appveyor.yml  clear.sh  dev-requirements.txt  licence.txt  pyproject.toml  requirements.txt  setup.py  test_all.py
.github/workflows/: main.yml  python-package-linux.yml  python-package.yml
examples/: M_regression_robust_nn.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  ar_1.ipynb  classification_pca_digits.ipynb  classification_pca_faces.ipynb  classification_pca_iris.ipynb  classification_pca_wine.ipynb  cls_boost_moon.ipynb  cls_linear_digits.ipynb  cls_mahalanobis_iris.ipynb  cls_mahalanobis_starsCYG.ipynb  cls_margin_max.ipynb  cls_nn_reg.ipynb  cls_rob_mahalanobis_iris.ipynb  cls_robanyboost_2circle.ipynb  cls_robanyboost_moon.ipynb  cls_robanyboost_penguins.ipynb  derivative_matrix.ipynb  diabets_nn.ipynb  figures_for_lectures.ipynb  func_robust.ipynb  gradient_boosting_1.ipynb  gradient_boosting_3.ipynb  gradient_boosting_boston.ipynb  gradient_boosting_california.ipynb  gradient_boosting_cancer.ipynb  gradient_boosting_cancer2.ipynb  gradient_boosting_cancer_classification.ipynb  gradient_boosting_diabets.ipynb  gradient_boosting_linear.ipynb  gradient_boosting_linear_regression.ipynb  gradient_boosting_moons.ipynb  gradient_boosting_moons_classification.ipynb  gradient_boosting_nn.ipynb  intro_gradient_based_optimization.ipynb  iris.ipynb  isnn2018_robust_nn.ipynb  isnn2018_robust_nn2.ipynb  (+195 more)
examples/data/: Animals2.csv  CigarettesSW.csv  HIP_star.names  USJudgeRatings.csv  antibiotics.csv  bearings.csv  boston.csv  diabets.csv  dso.names  hygdata_v3-abridged.csv  hygdata_v3.names  hygdata_v3.txt  iris.data  mesures.txt  mtcars.csv  noxemissions.csv  nzis11-cart-surf.csv  octane.csv  quality_measure.csv  swissbanknotes.txt  telef.csv
examples/fig/rob_kmeans/: robust_kmeans_m1.eps  robust_kmeans_m2.eps  robust_kmeans_m2_1.eps
examples/reveal.js/: dissimiliarity_funcs.ipynb
examples/robml_book/: cls_boost_spectra.ipynb  cls_expit.ipynb  cls_linear_digits.ipynb  cls_linear_digits2.ipynb  cls_linear_iris.ipynb  cls_margin_max.ipynb  cls_margin_max_exp.ipynb  cls_margin_max_pca.ipynb  cls_margin_max_pca_digits.ipynb  cls_margin_max_pca_wine.ipynb  cls_nn_iris.ipynb  cls_spectra.ipynb  cluster_spectra.ipynb  cluster_starsCYG.ipynb  kmeans_classic.ipynb  kmeans_classic_wine.ipynb  kmeans_robust1.ipynb  kmeans_s3.ipynb  linear_lasso.ipynb  linear_lasso2.ipynb  linear_lasso3.ipynb  loss_funcs.ipynb  nn_classification_digits.ipynb  nn_classification_iris.ipynb  nonlinear_classification_iris.ipynb  p5_python_classification_knn.ipynb  p7_python_nonparametric_regression.ipynb  pca_digits.ipynb  polynomial_regression.ipynb  python_crossval.ipynb  python_crossvalidation.ipynb  rob_linregr_HIP_star.ipynb  rob_linregr_animals.ipynb  rob_linregr_liver_disorders.ipynb  rob_linregr_quality_mesure.ipynb  rob_linregr_starsCYG.ipynb  rob_linregr_tone.ipynb  rob_whittaker_smoother.ipynb  robust_linear_regression.ipynb  scattermatrix_digits.ipynb  (+3 more)
lib/mlgrad/: __init__.py  array_allocator.c  array_allocator.pxd  array_allocator.pyx  array_transform.c  array_transform.pxd  array_transform.pyx  averager.c  averager.pxd  averager.pyx  averager_array.pyx  averager_scalar.pyx  avragg.c  avragg.pxd  avragg.pyx  avragg_fg.pyx  avragg_it.pyx  avragg_sag.pyx  avragg_wm.pyx  batch.c  batch.pxd  batch.pyx  cytest.c  cytest.pyx  dissimilarity.c  dissimilarity.pyx  distance.c  distance.pxd  distance.pyx  distrfuncs.pyx  func.c  func.pxd  func.pyx  func2.c  func2.pxd  func2.pyx  funcs.pxd  funcs.pyx  funcs2.c  funcs2.pxd  (+94 more)
lib/mlgrad/af/: __init__.py
lib/mlgrad/boost/: anyboost.py  gb_classification.py  nnboost.py  (+2 more)
(+1481 files in other folders)
