[project]
name = "mlgrad"
version = "0.6.1"
authors = [
    {name = "Zaur Shibzukhov", email = "szport@gmail.com"},
]
description = "Machine Learning tools."
# readme = "README.rst"
# license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "machine learning",
    "data analysis"
]
requires-python = ">=3.8"
dependencies = [
    "numpy",  
    "Cython", 
]

[build-system]
requires = [
    "setuptools",
    "Cython",
    "numpy",
]
build-backend = "setuptools.build_meta"