[project]
name = "mlgrad"
version = "0.6.1"
authors = [
    {name = "Zaur Shibzukhov", email = "szport@gmail.com"},
]
description = "Machine Learning tools."
readme = "README.md"
license = {file = "licence.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "machine learning",
    "data analysis"
]
requires-python = ">=3.8"
dependencies = [
    "Cython", 
    "numpy",  
]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy",
]
build-backend = "setuptools.build_meta"