[project]
name = "mlgrad"
version = "0.7.5"
authors = [
    {name = "Zaur Shibzukhov", email = "szport@gmail.com"},
]
description = "Machine Learning tools."
readme = "README.md"
license = {file = "licence.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "machine learning",
    "data analysis"
]
requires-python = ">=3.8"
dependencies = [
    "cython",
    "numpy",
    "pytest"
]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "cython",
    "numpy",
    "pytest"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Switch to using build
build-frontend = "build"
# explicitly enable pypy
# enable = ["pypy"]
# Disable building py3.6/7/8, pp3.8, 32bit linux
skip = ["*_i686"]
# Run the package tests using `pytest`
#test-extras = "tests"
#test-command = "pytest -v /{package}/tests"
